# python-absurd-client

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_UPDATED.md  pyproject.toml  requirements.txt  setup.py  test_absurd_client.py
absurd_client/: __init__.py
docs/: README.md  absurd_client.rst  api.rst  conf.py  error_handling.rst  examples.rst  index.rst  installation.rst  modules.rst  quickstart.rst  workflow_tracking.rst
docs/_build/: .buildinfo  .buildinfo.bak  absurd_client.html  api.html  error_handling.html  examples.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  workflow_tracking.html
docs/_build/.doctrees/: absurd_client.doctree  api.doctree  environment.pickle  error_handling.doctree  examples.doctree  index.doctree  installation.doctree  modules.doctree  quickstart.doctree  workflow_tracking.doctree
docs/_build/_modules/: absurd_client.html  index.html
docs/_build/_sources/: error_handling.rst.txt  examples.rst.txt  index.rst.txt  modules.rst.txt
